--- a/blogs.html
+++ b/blogs.html
@@ -33,12 +33,14 @@
                     <TH>Time to Vist</TH>
                     <th>Travel Charges</th>
                     <th>Tours</th>
+                    <th>Nearby places </th>
                 </tr>
                 <tr>
                     <td>50km</td>
                     <Td>8:00AM-9:00PM</Td>
                     <td>500-1000rs</td>
                     <td><a href="https://www.makemytrip.com/">Click here</a></td>
+                    <td><a href="https://www.google.com/maps/place/Arulmigu+Manakula+Vinayagar+Devasthanam/data=!4m7!3m6!1s0x3a5363d45f5d231f:0x6075c6b2dcbbbdc6!8m2!3d11.9357756!4d79.8336621!16s%2Fg%2F120j87hr!19sChIJHyNdX9RjUzoRxr273LLGdWA?authuser=0&hl=en&rclk=1">Click here</a></td>
                 </tr>
             </table>
         </tr></table>
@@ -61,13 +63,14 @@
                     <th>DISTANCE</th>
                     <TH>Time to Vist</TH>
                     <th>Travel Charges</th>
-                    <th>Tours</th>
+                    <th>Tours</th><th>Nearby places </th>
+                    
                 </tr>
                 <tr>
                     <td>50km</td>
                     <Td>8:00AM-9:00PM</Td>
                     <td>500-1000rs</td>
-                    <td><a href="https://www.makemytrip.com/">Click here</a></td>
+                    <td><a href="https://www.makemytrip.com/">Click here</a></td><td><a href="https://www.google.com/maps/place/Arulmigu+Manakula+Vinayagar+Devasthanam/data=!4m7!3m6!1s0x3a5363d45f5d231f:0x6075c6b2dcbbbdc6!8m2!3d11.9357756!4d79.8336621!16s%2Fg%2F120j87hr!19sChIJHyNdX9RjUzoRxr273LLGdWA?authuser=0&hl=en&rclk=1">Click here</a></td>
                 </tr>
             </table>
         </tr></table>
@@ -91,13 +94,13 @@
                     <th>DISTANCE</th>
                     <TH>Time to Vist</TH>
                     <th>Travel Charges</th>
-                    <th>Tours</th>
+                    <th>Tours</th><th>Nearby places </th>
                 </tr>
                 <tr>
                     <td>50km</td>
                     <Td>8:00AM-9:00PM</Td>
                     <td>500-1000rs</td>
-                    <td><a href="https://www.makemytrip.com/">Click here</a></td>
+                    <td><a href="https://www.makemytrip.com/">Click here</a></td><td><a href="https://www.google.com/maps/place/Arulmigu+Manakula+Vinayagar+Devasthanam/data=!4m7!3m6!1s0x3a5363d45f5d231f:0x6075c6b2dcbbbdc6!8m2!3d11.9357756!4d79.8336621!16s%2Fg%2F120j87hr!19sChIJHyNdX9RjUzoRxr273LLGdWA?authuser=0&hl=en&rclk=1">Click here</a></td>
                 </tr>
             </table>
         </tr></table>
@@ -122,13 +125,13 @@
                     <th>DISTANCE</th>
                     <TH>Time to Vist</TH>
                     <th>Travel Charges</th>
-                    <th>Tours</th>
+                    <th>Tours</th><th>Nearby places </th>
                 </tr>
                 <tr>
                     <td>50km</td>
                     <Td>8:00AM-9:00PM</Td>
                     <td>500-1000rs</td>
-                    <td><a href="https://www.makemytrip.com/">Click here</a></td>
+                    <td><a href="https://www.makemytrip.com/">Click here</a></td><td><a href="https://www.google.com/maps/place/Arulmigu+Manakula+Vinayagar+Devasthanam/data=!4m7!3m6!1s0x3a5363d45f5d231f:0x6075c6b2dcbbbdc6!8m2!3d11.9357756!4d79.8336621!16s%2Fg%2F120j87hr!19sChIJHyNdX9RjUzoRxr273LLGdWA?authuser=0&hl=en&rclk=1">Click here</a></td>
                 </tr>
             </table>
         </tr></table>
@@ -149,13 +152,13 @@
                     <th>DISTANCE</th>
                     <TH>Time to Vist</TH>
                     <th>Travel Charges</th>
-                    <th>Tours</th>
+                    <th>Tours</th><th>Nearby places </th>
                 </tr>
                 <tr>
                     <td>50km</td>
                     <Td>8:00AM-9:00PM</Td>
                     <td>500-1000rs</td>
-                    <td><a href="https://www.makemytrip.com/">Click here</a></td>
+                    <td><a href="https://www.makemytrip.com/">Click here</a></td><td><a href="https://www.google.com/maps/place/Arulmigu+Manakula+Vinayagar+Devasthanam/data=!4m7!3m6!1s0x3a5363d45f5d231f:0x6075c6b2dcbbbdc6!8m2!3d11.9357756!4d79.8336621!16s%2Fg%2F120j87hr!19sChIJHyNdX9RjUzoRxr273LLGdWA?authuser=0&hl=en&rclk=1">Click here</a></td>
                 </tr>
             </table>
         </tr></table>
@@ -178,13 +181,13 @@
                     <th>DISTANCE</th>
                     <TH>Time to Vist</TH>
                     <th>Travel Charges</th>
-                    <th>Tours</th>
+                    <th>Tours</th><th>Nearby places </th>
                 </tr>
                 <tr>
                     <td>50km</td>
                     <Td>8:00AM-9:00PM</Td>
                     <td>500-1000rs</td>
-                    <td><a href="https://www.makemytrip.com/">Click here</a></td>
+                    <td><a href="https://www.makemytrip.com/">Click here</a></td><td><a href="https://www.google.com/maps/place/Arulmigu+Manakula+Vinayagar+Devasthanam/data=!4m7!3m6!1s0x3a5363d45f5d231f:0x6075c6b2dcbbbdc6!8m2!3d11.9357756!4d79.8336621!16s%2Fg%2F120j87hr!19sChIJHyNdX9RjUzoRxr273LLGdWA?authuser=0&hl=en&rclk=1">Click here</a></td>
                 </tr>
             </table>
         </tr></table>
@@ -208,13 +211,13 @@
                     <th>DISTANCE</th>
                     <TH>Time to Vist</TH>
                     <th>Travel Charges</th>
-                    <th>Tours</th>
+                    <th>Tours</th><th>Nearby places </th>
                 </tr>
                 <tr>
                     <td>50km</td>
                     <Td>8:00AM-9:00PM</Td>
                     <td>500-1000rs</td>
-                    <td><a href="https://www.makemytrip.com/">Click here</a></td>
+                    <td><a href="https://www.makemytrip.com/">Click here</a></td><td><a href="https://www.google.com/maps/place/Arulmigu+Manakula+Vinayagar+Devasthanam/data=!4m7!3m6!1s0x3a5363d45f5d231f:0x6075c6b2dcbbbdc6!8m2!3d11.9357756!4d79.8336621!16s%2Fg%2F120j87hr!19sChIJHyNdX9RjUzoRxr273LLGdWA?authuser=0&hl=en&rclk=1">Click here</a></td>
                 </tr>
             </table>
         </tr></table>
@@ -241,13 +244,13 @@
                     <th>DISTANCE</th>
                     <TH>Time to Vist</TH>
                     <th>Travel Charges</th>
-                    <th>Tours</th>
+                    <th>Tours</th><th>Nearby places </th>
                 </tr>
                 <tr>
                     <td>50km</td>
                     <Td>8:00AM-9:00PM</Td>
                     <td>500-1000rs</td>
-                    <td><a href="https://www.makemytrip.com/">Click here</a></td>
+                    <td><a href="https://www.makemytrip.com/">Click here</a></td><td><a href="https://www.google.com/maps/place/Arulmigu+Manakula+Vinayagar+Devasthanam/data=!4m7!3m6!1s0x3a5363d45f5d231f:0x6075c6b2dcbbbdc6!8m2!3d11.9357756!4d79.8336621!16s%2Fg%2F120j87hr!19sChIJHyNdX9RjUzoRxr273LLGdWA?authuser=0&hl=en&rclk=1">Click here</a></td>
                 </tr>
             </table>
         </tr></table>
